fix(card): leave auto height to prevent image stretch on chrome

--- a/src/definitions/views/card.less
+++ b/src/definitions/views/card.less
@@ -457,7 +457,6 @@
     display: -webkit-flex;
     display: flex;
     width: 100%;
-    height: 100%;
     border-radius: @defaultBorderRadius 0 0 @defaultBorderRadius;
   }
   .ui.horizontal.cards > .card > .image:last-child > img,
